--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no"
       id="viewport"
     />
-    <title>Douyin</title>
+    <title>抖音</title>
     <!--    <script crossorigin="anonymous"-->
     <!--            integrity="sha512-KkkY/3auRhaXDFzFMpwtZ+BrS8EBQ+GfiBxdJ9jGMi6Gg74/sYbq/IZpY593pkNjTmbeRfBwjpZo+7gcpH45Ww=="-->
     <!--            src="https://lib.baomitu.com/eruda/3.0.1/eruda.min.js"></script>-->
