--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no"
       id="viewport"
     />
-    <title>Douyin</title>
+    <title>抖音</title>
 <script src="https://lib.baomitu.com/vue/3.4.21/vue.runtime.global.prod.min.js"></script>
 <script src="https://lib.baomitu.com/vue-router/4.3.0/vue-router.global.prod.min.js"></script>
 <script src="https://lib.baomitu.com/vue-demi/0.14.7/index.iife.min.js"></script>
@@ -59,7 +59,7 @@
         }
       }
     </style>
-    <script type="module" crossorigin src="./js/index-DM7hNOff.js"></script>
+    <script type="module" crossorigin src="./js/index-C1D6ahmQ.js"></script>
     <link rel="modulepreload" crossorigin href="./js/vendor-EcFAmbRN.js">
     <link rel="modulepreload" crossorigin href="./js/common-Cj2DXq7d.js">
     <link rel="modulepreload" crossorigin href="./js/other-Dl-hmeYP.js">
