--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
       }
     </style>
-    <script type="module" crossorigin src="./js/index-C1D6ahmQ.js"></script>
+    <script type="module" crossorigin src="./js/index-DtYNX4B2.js"></script>
     <link rel="modulepreload" crossorigin href="./js/vendor-EcFAmbRN.js">
     <link rel="modulepreload" crossorigin href="./js/common-Cj2DXq7d.js">
     <link rel="modulepreload" crossorigin href="./js/other-Dl-hmeYP.js">
